[package]
name = "starcoin-consensus"
version = "1.10.0-rc.2"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.41"
thiserror = "1.0"
futures = "0.3.12"
once_cell = "1.10.0"
starcoin-types = { path = "../types" }
starcoin-chain-api = { path = "../chain/api" }
starcoin-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "d871dfb4216f034ee334a575926c101574d9d6dc"}
rand = "0.8.5"
rand_core = { version = "0.6.3", default-features = false }
byteorder = "1.4.3"
rust-argon2 = "0.8"
hex = { version = "0.4.3", default-features = false }
starcoin-logger = { path = "../commons/logger"}
starcoin-state-api = { path = "../state/api" }
starcoin-vm-types = { path = "../vm/types" }
sha3 = { version = "0.10.1" }
cryptonight-rs = { path = "cryptonight-rs" }
proptest = { version = "1.0.0", default-features = false, optional = true }
proptest-derive = { version = "0.3.0", default-features = false, optional = true }

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = { version = "0.3.0" }
stest = { path = "../commons/stest" }

[features]
default = []
fuzzing = ["proptest", "proptest-derive", "starcoin-types/fuzzing"]
