[package]
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2021"
license = "Apache-2.0"
name = "starcoin-consensus"
publish = false
version = "1.12.8"

[dependencies]
anyhow = "1.0.41"
byteorder = "1.4.3"
cryptonight-rs = {path = "cryptonight-rs"}
futures = "0.3.12"
hex = {version = "0.4.3", default-features = false}
once_cell = "1.13.0"
proptest = {version = "1.0.0", default-features = false, optional = true}
proptest-derive = {version = "0.3.0", default-features = false, optional = true}
rand = "0.8.5"
rand_core = {version = "0.6.3", default-features = false}
rust-argon2 = "0.8"
sha3 = {version = "0.10.1"}
starcoin-chain-api = {path = "../chain/api"}
starcoin-crypto = {git = "https://github.com/starcoinorg/starcoin-crypto", rev = "d871dfb4216f034ee334a575926c101574d9d6dc"}
starcoin-logger = {path = "../commons/logger"}
starcoin-state-api = {path = "../state/api"}
starcoin-time-service = {path = "../commons/time-service"}
starcoin-types = {path = "../types"}
starcoin-vm-types = {path = "../vm/types"}
thiserror = "1.0"

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = {version = "0.3.0"}
stest = {path = "../commons/stest"}

[features]
default = []
fuzzing = ["proptest", "proptest-derive", "starcoin-types/fuzzing"]
