[build-dependencies]
serde-reflection = "~0.3"
starcoin-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "d871dfb4216f034ee334a575926c101574d9d6dc" }
starcoin-types = { path = "../types" }
anyhow = "1.0"
bcs-ext = { package = "bcs-ext", path = "../commons/bcs_ext" }
serde = "1.0.130"
serde_yaml = "0.8"

[dependencies]

[package]
authors = { workspace = true }
edition = { workspace = true }
name = "starcoin-dataformat-generator"
version = "1.12.9"
build = "build.rs"
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
