[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "starcoin-dev"
publish = { workspace = true }
version = "2.0.1"
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
starcoin-abi-decoder = { workspace = true }
starcoin-abi-resolver = { workspace = true }
starcoin-abi-types = { workspace = true }
starcoin-types = { workspace = true }
starcoin-crypto = { workspace = true }
starcoin-resource-viewer = { workspace = true }
starcoin-state-api = { workspace = true }
starcoin-statedb = { workspace = true }
starcoin-vm-runtime = { workspace = true }
starcoin-vm-types = { workspace = true }
vm-status-translator = { workspace = true }
starcoin-metrics = { workspace = true }