[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
starcoin-logger = { workspace = true }
starcoin-crypto = { workspace = true }
starcoin-metrics = { workspace = true }
starcoin-state-api = { workspace = true }
starcoin-types = { workspace = true }
starcoin-vm-types = { workspace = true }
starcoin-vm-runtime-mock = { workspace = true }
starcoin-statedb = { workspace = true }
starcoin-force-upgrade = { workspace = true }
serde = { workspace = true }
bcs-ext = { workspace = true }

[dev-dependencies]
bcs-ext = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starcoin-abi-resolver = { workspace = true }
starcoin-abi-types = { workspace = true }
starcoin-config = { workspace = true }
starcoin-consensus = { workspace = true }
starcoin-dev = { workspace = true }
starcoin-resource-viewer = { workspace = true }
starcoin-transaction-builder = { workspace = true }
starcoin-state-tree = { workspace = true }
starcoin-statedb = { workspace = true }
starcoin-force-upgrade = { workspace = true }
stdlib = { workspace = true }
stest = { workspace = true }
tempfile = { workspace = true }
test-helper = { workspace = true }
move-transactional-test-runner = { workspace = true }

[features]
default = []
fuzzing = ["starcoin-types/fuzzing"]
force-deploy = []

[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "starcoin-executor"
publish = { workspace = true }
version = "2.0.1"
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
