[package]
name = "starcoin-flexidag"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = "1.13.7"
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
starcoin-config = { workspace = true }
starcoin-crypto = { workspace = true }
starcoin-logger = { workspace = true }
starcoin-service-registry = { workspace = true }
starcoin-storage = { workspace = true }
starcoin-types = { workspace = true }
tokio = { workspace = true }
starcoin-consensus = { workspace = true }
starcoin-accumulator = { workspace = true }

