[dependencies]
anyhow = { workspace = true }
bcs-ext = { workspace = true }
clap = { features = ["derive"], workspace = true }
include_dir = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
starcoin-accumulator = { workspace = true }
starcoin-chain = { workspace = true }
starcoin-config = { workspace = true }
starcoin-consensus = { workspace = true }
starcoin-crypto = { workspace = true }
starcoin-executor = { workspace = true }
starcoin-logger = { workspace = true }
starcoin-state-api = { workspace = true }
starcoin-statedb = { workspace = true }
starcoin-storage = { workspace = true }
starcoin-transaction-builder = { workspace = true }
starcoin-types = { features = ["fuzzing"], workspace = true }
starcoin-vm-types = { workspace = true }
starcoin-vm-runtime = { workspace = true }
stdlib = { workspace = true }
stest = { workspace = true }
thiserror = { workspace = true }

# dependencies for move2
starcoin-vm2-storage = { workspace = true }
starcoin-vm2-transaction-builder = { workspace = true }
starcoin-vm2-types = { workspace = true }
starcoin-vm2-crypto = { workspace = true }
starcoin-vm2-statedb = { workspace = true }
starcoin-vm2-executor = { workspace = true }

[features]
default = []
fuzzing = ["starcoin-types/fuzzing"]

[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "starcoin-genesis"
publish = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
