[package]
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2021"
name = "starcoin-miner"
version = "1.12.9"

[dependencies]
anyhow = "1.0.41"
futures = "0.3.12"
futures-timer = "3.0"
hex = {version = "0.4.3"}
once_cell = "1.13.0"
parking_lot = "0.12.1"
thiserror = "1.0"

bcs-ext = {package = "bcs-ext", path = "../commons/bcs_ext"}
consensus = {path = "../consensus", package = "starcoin-consensus"}
crypto = {package = "starcoin-crypto", git = "https://github.com/starcoinorg/starcoin-crypto", rev = "d871dfb4216f034ee334a575926c101574d9d6dc"}
executor = {path = "../executor", package = "starcoin-executor"}
logger = {path = "../commons/logger", package = "starcoin-logger"}
serde = "1.0.130"
starcoin-account-api = {path = "../account/api"}
starcoin-account-service = {path = "../account/service"}
starcoin-accumulator = {path = "../commons/accumulator", package = "starcoin-accumulator"}
starcoin-chain = {path = "../chain"}
starcoin-config = {path = "../config"}
starcoin-metrics = {path = "../commons/metrics"}
starcoin-open-block = {path = "../chain/open-block"}
starcoin-service-registry = {path = "../commons/service-registry"}
starcoin-state-api = {path = "../state/api"}
starcoin-storage = {path = "../storage"}
starcoin-txpool = {path = "../txpool"}
starcoin-txpool-api = {path = "../txpool/api"}
starcoin-vm-types = {path = "../vm/types"}

state_tree = {path = "../state/state-tree", package = "starcoin-state-tree"}
statedb = {path = "../state/statedb", package = "starcoin-statedb"}
tokio = {version = "^1", features = ["full"]}
types = {path = "../types", package = "starcoin-types"}

[dev-dependencies]
network-rpc = {path = "../network-rpc", package = "starcoin-network-rpc"}
starcoin-genesis = {path = "../genesis"}
starcoin-network-rpc-api = {path = "../network-rpc/api"}
starcoin-node = {path = "../node"}
starcoin-state-service = {path = "../state/service"}
starcoin-sync-api = {package = "starcoin-sync-api", path = "../sync/api"}
starcoin-time-service = {path = "../commons/time-service"}
stest = {path = "../commons/stest"}
sync = {path = "../sync", package = "starcoin-sync"}
test-helper = {path = "../test-helper"}
