[package]
name = "mint"
version = "0.1.0"
authors = ["tiangong3624749 <tiangong3624749@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
actix = "0.9"
config = {path = "../config", package="starcoin-config"}
network = {path = "../network", package="starcoin-network"}
chain = {path = "../chain", package="starcoin-chain" }
