[package]
name = "network-p2p"
version = "1.11.1-alpha"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.41"
bitflags = "1.3.2"
bytes = "1"
once_cell = "1.10.0"
async-trait = "0.1"
asynchronous-codec = "0.5"

bcs-ext = { package="bcs-ext", path = "../commons/bcs_ext" }

derive_more = "0.99.14"
either = "1.6.1"
fnv = "1.0.6"
futures = "0.3.12"
futures-timer = "3.0"
linked-hash-map = "0.5.4"
linked_hash_set = "0.1.3"
log = "0.4.14"
lru = "0.7.3"
parking_lot = "0.12.0"
rand = "0.8.5"
pin-project = "0.4.27"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version="1.0", features = ["arbitrary_precision"]}
smallvec = "1.8.0"
thiserror = "1"
unsigned-varint = { version = "0.6.0", features = ["futures", "asynchronous_codec"] }
void = "1.0.2"
zeroize = "1.3.0"
hex= "0.4.3"
wasm-timer = "0.2"
sc-peerset = {  path = "peerset" }
starcoin-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "d871dfb4216f034ee334a575926c101574d9d6dc"}
starcoin-metrics = {path = "../commons/metrics"}
starcoin-types = {path = "../types"}
network-p2p-types = {path = "./types"}
prometheus = "0.13.0"
ip_network = "0.3.4"
bs58 = "0.3.1"
async-std = "1.10.0"


[dependencies.libp2p]
version = "0.42.2"
[dev-dependencies]
stest = {path = "../commons/stest"}
async-std = "1.10"
tempfile = "3.1.0"


[features]
default = []

