[package]
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2021"
license = "Apache-2.0"
name = "network-p2p"
publish = false
version = "1.12.9"

[dependencies]
anyhow = "1.0.41"
async-trait = "0.1"
asynchronous-codec = "0.5"
bitflags = "1.3.2"
bytes = "1"
once_cell = "1.13.0"

bcs-ext = {package = "bcs-ext", path = "../commons/bcs_ext"}

async-std = "1.12.0"
bs58 = "0.3.1"
derive_more = "0.99.14"
either = "1.7.0"
fnv = "1.0.6"
futures = "0.3.12"
futures-timer = "3.0"
hex = "0.4.3"
ip_network = "0.3.4"
linked-hash-map = "0.5.6"
linked_hash_set = "0.1.3"
log = "0.4.16"
lru = "0.7.8"
network-p2p-types = {path = "./types"}
parking_lot = "0.12.1"
pin-project = "0.4.27"
prometheus = "0.13.0"
rand = "0.8.5"
sc-peerset = {path = "peerset"}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = {version = "1.0", features = ["arbitrary_precision"]}
smallvec = "1.10.0"
starcoin-crypto = {git = "https://github.com/starcoinorg/starcoin-crypto", rev = "d871dfb4216f034ee334a575926c101574d9d6dc"}
starcoin-metrics = {path = "../commons/metrics"}
starcoin-types = {path = "../types"}
thiserror = "1"
unsigned-varint = {version = "0.6.0", features = [
  "futures",
  "asynchronous_codec",
]}
void = "1.0.2"
wasm-timer = "0.2"
zeroize = "1.3.0"

[dependencies.libp2p]
version = "0.42.2"
[dev-dependencies]
async-std = "1.12"
stest = {path = "../commons/stest"}
tempfile = "3.1.0"

[features]
default = []
