[package]
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2021"
license = "Apache-2.0"
name = "starcoin-network-rpc"
publish = false
version = "1.12.5"

[dependencies]
anyhow = "1.0.41"
bytes = "1"
futures = "0.3.12"
hex = "0.4.3"
once_cell = "1.13.0"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.59"
tokio = {version = "^1", features = ["full"]}

accumulator = {path = "../commons/accumulator", package = "starcoin-accumulator"}
api-limiter = {path = "../commons/api-limiter"}
bcs-ext = {path = "../commons/bcs_ext", package = "bcs-ext"}
config = {path = "../config", package = "starcoin-config"}
crypto = {package = "starcoin-crypto", git = "https://github.com/starcoinorg/starcoin-crypto", rev = "d871dfb4216f034ee334a575926c101574d9d6dc"}
network-api = {path = "../network/api"}
network-p2p-types = {path = "../network-p2p/types"}
network-rpc-core = {path = "core"}
network-rpc-derive = {path = "derive", package = "network-rpc-derive"}
prometheus = "0.13.0"
starcoin-chain-service = {path = "../chain/service"}
starcoin-logger = {path = "../commons/logger"}
starcoin-network-rpc-api = {path = "api"}
starcoin-service-registry = {path = "../commons/service-registry"}
starcoin-state-api = {path = "../state/api"}
starcoin-state-service = {path = "../state/service"}
starcoin-storage = {path = "../storage", package = "starcoin-storage"}
starcoin-types = {path = "../types", package = "starcoin-types"}
state-tree = {path = "../state/state-tree", package = "starcoin-state-tree"}
txpool = {path = "../txpool", package = "starcoin-txpool"}
txpool-api = {path = "../txpool/api", package = "starcoin-txpool-api"}

[dev-dependencies]
account-api = {path = "../account/api", package = "starcoin-account-api"}
block-relayer = {path = "../block-relayer", package = "starcoin-block-relayer"}
consensus = {path = "../consensus", package = "starcoin-consensus"}
futures-timer = "3.0"
miner = {path = "../miner", package = "starcoin-miner"}
network = {path = "../network", package = "starcoin-network"}
starcoin-node = {path = "../node"}
statedb = {path = "../state/statedb", package = "starcoin-statedb"}
stest = {path = "../commons/stest"}
test-helper = {path = "../test-helper"}
vm_types = {path = "../vm/types", package = "starcoin-vm-types"}
