[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
tokio = { features = ["full"], workspace = true }
api-limiter = { workspace = true }
bcs-ext = { package = "bcs-ext", workspace = true }
starcoin-crypto = { package = "starcoin-crypto", workspace = true }
network-api = { workspace = true }
network-p2p-types = { workspace = true }
network-p2p-core = { workspace = true }
network-p2p-derive = { package = "network-p2p-derive", workspace = true }
prometheus = { workspace = true }
starcoin-accumulator = { workspace = true }
starcoin-chain-service = { workspace = true }
starcoin-logger = { workspace = true }
starcoin-config = { workspace = true }
starcoin-network-rpc-api = { workspace = true }
starcoin-service-registry = { workspace = true }
starcoin-state-api = { workspace = true }
starcoin-state-service = { workspace = true }
starcoin-txpool = { workspace = true }
starcoin-txpool-api = { workspace = true }
starcoin-storage = { package = "starcoin-storage", workspace = true }
starcoin-types = { package = "starcoin-types", workspace = true }
starcoin-state-tree = { workspace = true }
starcoin-vm-types = { workspace = true }

[dev-dependencies]
starcoin-account-api = { package = "starcoin-account-api", workspace = true }
starcoin-block-relayer = { package = "starcoin-block-relayer", workspace = true }
starcoin-consensus = { package = "starcoin-consensus", workspace = true }
futures-timer = { workspace = true }
starcoin-miner = { package = "starcoin-miner", workspace = true }
starcoin-network = { package = "starcoin-network", workspace = true }
starcoin-node = { workspace = true }
starcoin-statedb = { package = "starcoin-statedb", workspace = true }
starcoin-txpool = { workspace = true }
starcoin-txpool-api = { workspace = true }
starcoin-vm-types = { workspace = true }
starcoin-storage = { package = "starcoin-storage", workspace = true }
stest = { workspace = true }
test-helper = { workspace = true }


[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "starcoin-network-rpc"
publish = { workspace = true }
version = "1.13.12-alpha"
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
