[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
api-limiter = { workspace = true }
bcs-ext = { workspace = true }
starcoin-crypto = { workspace = true }
network-api = { workspace = true }
network-p2p-types = { workspace = true }
network-p2p-core = { workspace = true }
starcoin-accumulator = { workspace = true }
starcoin-chain-service = { workspace = true }
starcoin-logger = { workspace = true }
starcoin-config = { workspace = true }
starcoin-network-rpc-api = { workspace = true }
starcoin-service-registry = { workspace = true }
starcoin-txpool = { workspace = true }
starcoin-txpool-api = { workspace = true }
starcoin-storage = { workspace = true }
starcoin-types = { workspace = true }

[dev-dependencies]
starcoin-node = { workspace = true }
starcoin-txpool = { workspace = true }
starcoin-txpool-api = { workspace = true }
starcoin-vm-types = { workspace = true }
stest = { workspace = true }
test-helper = { workspace = true }


[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "starcoin-network-rpc"
publish = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
