[package]
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2021"
license = "Apache-2.0"
name = "starcoin-network"
publish = false
version = "1.12.7"

[dependencies]
anyhow = "1.0.41"
bytes = "1"
futures = "0.3.12"
futures-timer = "3.0"
hex = "0.4.3"
log = "0.4.16"

network-p2p = {path = "../network-p2p"}
network-p2p-types = {path = "../network-p2p/types"}
starcoin-config = {path = "../config"}
starcoin-logger = {path = "../commons/logger"}
starcoin-txpool-api = {path = "../txpool/api"}
starcoin-types = {path = "../types"}

bcs-ext = {package = "bcs-ext", path = "../commons/bcs_ext"}
starcoin-crypto = {git = "https://github.com/starcoinorg/starcoin-crypto", rev = "d871dfb4216f034ee334a575926c101574d9d6dc"}

bitflags = "1.3.2"
fnv = "1.0.6"
zeroize = "1.3.0"

lru = "0.7.8"
parking_lot = "0.12.1"
rand = "0.8.5"
tempfile = "3.1.0"

async-std = "1.12"
async-trait = "0.1.51"
derive_more = "0.99.14"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = {version = "1.0", features = ["arbitrary_precision"]}
stest = {path = "../commons/stest"}

prometheus = "0.13.0"

network-api = {package = "network-api", path = "../network/api"}
network-rpc-core = {path = "../network-rpc/core"}
starcoin-metrics = {path = "../commons/metrics"}
starcoin-network-rpc = {path = "../network-rpc"}
starcoin-network-rpc-api = {path = "../network-rpc/api"}
starcoin-service-registry = {path = "../commons/service-registry"}
starcoin-storage = {path = "../storage"}

[dev-dependencies]
test-helper = {path = "../test-helper"}
tokio = {version = "^1", features = ["full"]}
