[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
network-p2p = { workspace = true }
network-p2p-types = { workspace = true }
starcoin-config = { workspace = true }
starcoin-logger = { workspace = true }
starcoin-txpool-api = { workspace = true }
starcoin-types = { workspace = true }
bcs-ext = { package = "bcs-ext", workspace = true }
starcoin-crypto = { workspace = true }
bitflags = { workspace = true }
fnv = { workspace = true }
zeroize = { workspace = true }
lru = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
async-std = { workspace = true }
async-trait = { workspace = true }
derive_more = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { features = ["arbitrary_precision"], workspace = true }
stest = { workspace = true }
prometheus = { workspace = true }
network-api = { workspace = true }
network-p2p-core = { workspace = true }
starcoin-metrics = { workspace = true }
starcoin-network-rpc = { workspace = true }
starcoin-network-rpc-api = { workspace = true }
starcoin-service-registry = { workspace = true }
starcoin-storage = { workspace = true }
sc-peerset = { workspace = true }

[dev-dependencies]
test-helper = { workspace = true }
tokio = { features = ["full"], workspace = true }

[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "starcoin-network"
publish = { workspace = true }
version = "1.13.12-alpha"
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
